Refactor code structure for improved readability and maintainability

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,31 +2,31 @@
 InterplanetaryLogistics=Interplanetary Logistics
 
 [mod-description]
-InterplanetaryLogistics=fügt diverse Technologien und Objekte hinzu, die es ermöglichen, große Mengen an Gegenständen über große Entfernungen zu transportieren.
+InterplanetaryLogistics=adds various technologies and objects that allow large quantities of items to be transported over long distances.
 
 [technology-name] 
 
 [technology-description] 
 
 [entity-name]
-il_attractor=Köder
+il_attractor=Attractor
 il_shuttle_dock=Shuttle Dock
 il_shuttle=Shuttle
-il_asteroid_destroyer=Asteroiden Vernichter
+il_asteroid_destroyer=Asteroiden Destroyer
 il_logistic_container=Logistik Container
 
 [entity-description]
-il_attractor=Ködert alle Feinde in einem großen Radius
-il_shuttle_dock=Dock für Shuttle-Transporter.
-il_shuttle=Shuttle-Transporter, der mit einem Shuttle Dock verbunden ist.
-il_asteroid_destroyer=Zerstört ausschlisslich Asteroiden in einem großen Radius.
-il_logistic_container=Logistik Container, der macht einfach noch garnichts :D 
+il_attractor=Lures all enemies in a large radius
+il_shuttle_dock=Dock for shuttle transporters.
+il_shuttle=Shuttle transporter connected to a shuttle dock.
+il_asteroid_destroyer=Only destroys asteroids within a large radius.
+il_logistic_container=Logistics container, it simply doesn't do anything yet :D
 
 [item-name]
-il_attractor=Köder
+il_attractor=Attractor
 il_shuttle_dock=Shuttle Dock
 il_shuttle=Shuttle
-il_asteroid_destroyer=Asteroiden Vernichter
+il_asteroid_destroyer=Asteroiden Destroyer
 il_logistic_container=Logistik Container
 
 
